# buen-camino

./: .gitignore  .pdm-python  README.md  config.toml  convert-healthkit-sqlite.sh  convert.toml  justfile  pyproject.toml
flagged/: log.csv
notebooks/: 3capes.ipynb  app.py  buen-camino.html  buen-camino.ipynb  camino-walks.ipynb  elt-duckdb.ipynb  elt-duckdb.py  gradio_example.py  marimo_mapping_example.py  sqlite-to-duckdb.ipynb  sydney-jenolan-walks.ipynb
sql/: workout_points.sql  workouts.sql
src/example_package/: ThreeCapes.py  healthkit_analyser.py  healthkit_converter.py  healthkit_to_sqlite.py  local_database_explorer.py  tmp.py
