[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "healthkit-to-sqlite>=1.0.1",
    "duckdb>=0.9.2",
    "pandas>=2.1.3",
    "folium>=0.15.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.0.6",
    "black[jupyter]>=23.11.0",
]
marimo = [
    "marimo>=0.3.1",
]
