[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "healthkit-to-sqlite>=1.0.1",
    "duckdb>=0.9.2",
    "pandas>=2.1.3",
    "folium>=0.15.0",
    "shiny>=0.8.1",
    "shinywidgets>=0.3.1",
    "loguru>=0.7.2",
    "itables>=2.0.0",
    "haversine>=2.8.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.0.6",
    "black[jupyter]>=23.11.0",
]
marimo = [
    "marimo>=0.3.1",
]
gradio = [
    "gradio>=4.21.0",
]
