[project]
name = "buen-camino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "folium>=0.19.5",
    "haversine>=2.9.0",
    "healthkit-to-sqlite>=1.0.1",
    "itables>=2.3.0",
    "loguru>=0.7.3",
    "marimo>=0.12.4",
    "pandas>=2.2.3",
    "shiny>=1.3.0",
    "shinywidgets>=0.5.2",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ruff>=0.11.4",
]
